added hateos throughout character methods